--- a/ativ-mscode/aula002/ex008 - media/index.html
+++ b/ativ-mscode/aula002/ex008 - media/index.html
@@ -12,7 +12,7 @@
         <form action="media.php" method="get">
             <label for="nota1">Digite a 1ª nota:</label>
             <input type="number" name="nota1" id="inota1">
-            <br>
+            <!-- <br>
             <label for="nota2">Digite a 2ª nota:</label>
             <input type="number" name="nota2" id="inota2">
             <br>
@@ -24,9 +24,14 @@
             <br>
             <label for="nota5">Digite a 5ª nota:</label>
             <input type="number" name="nota5" id="inota5">
-            <br>
+            <br> -->
+            <button onclick="addInput()">+</button>
             <input type="submit" value="Enviar">
         </form>
     </div>
+    <script>
+        function addInput(){   
+        }
+    </script>
 </body>
 </html>
